# Portfolio_Website

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  gunicorn.conf.py  pyproject.toml  requirements-dev.txt  requirements.txt
braille/: apps.py  urls.py  views.py
braille/static/braille/js/: brailler.js
braille/templates/braille/: index.html
portfolio/: asgi.py  urls.py  wsgi.py
portfolio/settings/: common.py  development.py  production.py
resume/: urls.py  views.py
resume/templates/resume/: contact.html  education.html  experience.html  index.html  projects.html  skills.html  summary.html
templates/: base.html  footer.html  header.html  meta.html  navbar.html
